# VulkanGameEngine

./: CMakeLists.txt
cmake/: engine.cmake
engine/: CMakeLists.txt
engine/include/: app.hpp  device.hpp  pipeline.hpp  swapchain.hpp  window.hpp
engine/src/: app.cpp  device.cpp  main.cpp  pipeline.cpp  swapchain.cpp  window.cpp
shaders/: compile.sh  simple_shader.vert
